# napi-demo

./: .gitignore  Cargo.toml  build.rs  index.d.ts  index.js  package-lock.json  package.json
.github/workflows/: CI.yml
__test__/: test.js
npm/darwin-x64/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: ipc.rs  lib.rs  test.js
