[package]
edition = "2021"
name = "napi_demo"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.11.1", default-features = false, features = [
  "tokio_fs",
  "napi8",
  "tokio_rt",
  "serde-json",
  "async",
  "experimental",
  "latin1",
  "chrono_date",
]}

napi-derive = "2.11.0"
tokio = { version = "1.20.0", features = ["full"] }
futures = "0.3"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
