[package]
edition = "2021"
name = "napi_demo"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.11.1", default-features = false, features = [
  "tokio_fs",
  "napi8",
  "tokio_rt",
  "serde-json",
  "async",
  "experimental",
  "latin1",
  "chrono_date",
]}

napi-derive = "2.11.0"
tokio = { version = "1.20.0", features = ["full"] }
futures = "0.3"

parity-tokio-ipc = "0.9.0"
shared_memory = "0.12.4"

proc-lock = "*"

bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
freqfs = "0.7.0"

winapi = { version = "0.3.8", features = ["memoryapi", "handleapi", "winbase", "minwindef"] }

thread-id = "4.0.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
